<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/gray">

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:id="@+id/linnear_princ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/nome_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ol"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:layout_marginEnd="6dp"/>

        <TextView
            android:id="@+id/email_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="@color/second"
            android:textStyle="bold"
            android:text="@string/empty" />
    </LinearLayout>


    <Switch
        android:id="@+id/switchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Disponível para Emergências"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#000000"
        android:thumbTint="@color/teal_700"
        android:layout_below="@+id/linnear_princ"
        android:layout_centerHorizontal="true"
        android:paddingTop="65dp" />

    <Button
        android:id="@+id/button_atendimento"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_above="@+id/button_emergencyList"
        android:layout_alignStart="@+id/button_emergencyList"
        android:layout_alignEnd="@+id/button_emergencyList"
        android:layout_marginBottom="15dp"
        android:text="@string/atendimento_pendente" />

    <Button
        android:id="@+id/button_history"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_above="@+id/button_details"
        android:layout_alignStart="@+id/button_emergencyList"
        android:layout_alignEnd="@+id/button_emergencyList"
        android:layout_marginBottom="15dp"
        android:text="@string/hist_rico_de_emerg_ncias" />

    <Button
        android:id="@+id/button_details"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_above="@+id/button_logout"
        android:layout_alignStart="@+id/button_emergencyList"
        android:layout_alignEnd="@+id/button_emergencyList"
        android:layout_marginBottom="40dp"
        android:text="@string/detalhes_da_conta" />

    <Button
        android:id="@+id/button_emergencyList"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:text="@string/lista_emergencias"
        android:layout_above="@+id/button_history"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"/>

    <Button
        android:id="@+id/button_logout"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/logout"
        android:backgroundTint="#B80000"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"/>

</RelativeLayout>