<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.RegisterActivity"
    android:background="@color/gray">

    <!-- <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_name_end"
        android:text="Nome"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        /> -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:background="@color/princ">

        <ImageView
            android:id="@+id/image_arrow_back"
            android:layout_width="40dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:src="@drawable/ic_arrow" />

        <Button
            android:id="@+id/btn_voltar_register"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_alignStart="@+id/image_arrow_back"
            android:layout_centerInParent="true"
            android:backgroundTint="@color/white"
            android:text="@string/voltar"
            android:textColor="@color/second"
            android:textSize="18sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mini_currículo"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/edit_mini_curriculo"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/edit_mini_curriculo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/escreva_aqui"
        android:maxLength="2000"
        android:padding="15dp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/text_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:layout_below="@+id/edit_mini_curriculo"
        android:layout_alignStart="@+id/edit_mini_curriculo"
        android:layout_marginStart="4dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="/2000"
        android:layout_below="@+id/edit_mini_curriculo"
        android:layout_toEndOf="@+id/text_count"/>

    <ProgressBar
        android:id="@+id/progress_register"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_below="@+id/edit_mini_curriculo"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/purple_700"
        android:visibility="visible" />
    <TextView
        android:id="@+id/text_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_mini_curriculo"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"/>
</RelativeLayout>