<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">
    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:src="@drawable/sorriso_24h_logoo"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/email"
        android:layout_marginBottom="80dp"/>

    <!-- Nome do aplicativo no topo da tela -->
   <!-- <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="95dp"
        android:text="@string/name_app"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="italic"/>-->

    <!-- Campo de email -->
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/password"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="5dp"
        android:background="@drawable/edittext_border"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:maxLines="1"/>

    <!-- Campo de senha -->
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="5dp"
        android:layout_centerVertical="true"
        android:background="@drawable/edittext_border"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        android:maxLines="1"/>

    <!-- Botão de login -->
    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/check_manter"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="8dp"
        android:text="@string/login"
        android:textSize="18sp"/>

    <!-- Texto para ir para a tela de cadastro -->

    <CheckBox
        android:id="@+id/check_manter"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="18dp"
        android:text="Mantenha-me conectado"
        android:textColor="@color/purple_700"
        android:textSize="15sp"
        android:layout_below="@id/password"/>

    <ProgressBar
        android:id="@+id/progress_login"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_below="@+id/login_button"
        android:layout_marginStart="15dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="15dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/purple_700"
        android:visibility="visible" />

    <TextView
        android:id="@+id/text_comp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="92dp"
        android:layout_marginBottom="30dp"
        android:text="Não tem conta?"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="30dp"
        android:layout_toEndOf="@+id/text_comp"
        android:text="@string/cadastre_se"
        android:textColor="@color/teal_700"
        android:textSize="18sp" />

</RelativeLayout>
